WIP: fix alignment of canvas/svg for coronal projection

--- a/css/main.css
+++ b/css/main.css
@@ -385,113 +385,29 @@ body.waiting * {
 
 .svg-canvas-container {
     position: relative;
-    width: 100%;
-    height: calc(100% - 96px)
+    /* width: 100%; */
+    /* height: calc(100% - 96px); */
+
+    flex: 1 1 0;
+    overflow: hidden;
 }
 
 .svg-canvas-container>canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    /* position: absolute; */
+    /* top: 0; */
+    /* left: 0; */
+    max-width: 100%;
+    max-height: 100%;
     z-index: 0;
-}
-
-#canvas-coronal {
-    top: 15%;
-    left: -1%;
-    width: 103%;
-    height: 75%;
-}
-
-#canvas-horizontal {
-    top: 10%;
-    left: 18%;
-    width: 68%;
-    height: 82%;
-}
-
-#canvas-sagittal {
-    top: 9%;
-    left: 12%;
-    width: 66%;
-    height: 82%;
 }
 
 .svg-canvas-container>svg {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
     z-index: 1;
 }
 
-/* #svg-coronal-container svg path {
-    fill-opacity: 0%;
-    stroke: #aaa;
-}
-
-
-#svg-sagittal-container svg path {
-    fill-opacity: 0%;
-    stroke: #aaa;
-}
-
-#svg-horizontal-container svg path {
-    fill-opacity: 0%;
-    stroke: #aaa;
-} */
-
-/* #svg-coronal-container-inner {
-    background-image: url("/data/volumes/coronal-0264.jpg");
-    background-position-x: 41%;
-    background-position-y: 80%;
-    background-size: 103% 90%;
-    background-repeat: no-repeat; */
-/* #svg-sagittal-container-inner {
-    background-image: url("/data/volumes/sagittal-0228.jpg");
-    background-position-x: 35.5%;
-    background-position-y: 90%;
-    background-size: 66.5% 100%;
-    background-repeat: no-repeat;
-} */
-/* #svg-horizontal-container-inner {
-    background-image: url("/data/volumes/horizontal-0160.jpg");
-    background-position-x: 56%;
-    background-position-y: 65%;
-    background-size: 69% 90%;
-    background-repeat: no-repeat;
-} */
-
-
-
-/*************************************************************************************************/
-/*  Share button                                                                                 */
-/*************************************************************************************************/
-
-/* #share-wrapper {
-    margin: 0;
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    z-index: 1000;
-
-}
-
-#share-button {
-    padding: 8px 14px;
-    font-size: 1.2em;
-    background-color: #0898D4;
-    font-weight: bold;
-    border-radius: 8px;
-    width: 100%;
-    color: white;
-    border: 0;
-    text-align: center;
-    cursor: pointer;
-} */
 
 
 /*************************************************************************************************/
@@ -766,15 +682,23 @@ div#container>.svg-wrapper {
     justify-content: center;
     text-align: center;
 
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    max-height: 100%;
+
     position: relative;
     top: 0;
     left: 0;
 }
 
 .svg-wrapper svg {
-    width: 100%;
-    height: 100%;
     display: block;
+
+    /* width: 100%; */
+    max-width: 100%;
+    max-height: 100%;
+    /* height: 100%; */
 
     /* DEBUG */
     /* background-color: red; */
@@ -858,6 +782,11 @@ div#container .maximized .maximizer {
 /*************************************************************************************************/
 /*  SVG slider                                                                                   */
 /*************************************************************************************************/
+
+.slider-container {
+    width: 100%;
+    flex: 0 1 100px;
+}
 
 .slider {
     width: 200px;
